Revised the introduction

--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -62,17 +62,17 @@ for Evolutionary AI Planning -- $Revision: 4461$}
 
 \section{Introduction}
 
-Parameter tuning is basically a general optimization problem applied off-line to find the best parameters for complex algorithms, for example for Evolutionary Algorithms (EAs). Whereas the efficiency of EAs has been demonstrated on several application domains (see for instance \cite{practice08} and \cite{ParameterSettingBook07}), they usually need computationally expensive parameter tuning. Consequently, one is tempted to use either the default parameters of the framework he is using, or parameter values given in the literature for problems that are similar to his one. 
+Parameter tuning is basically a general optimization problem applied off-line to find the best parameters for complex algorithms, for example for Evolutionary Algorithms (EAs). Whereas the efficiency of EAs has been demonstrated on several application domains \cite{practice08,ParameterSettingBook07}, they usually need computationally expensive parameter tuning. Consequently, one is tempted to use either the default parameters of the framework he is using, or parameter values given in the literature for problems that are similar to his one. 
 
-Being a general optimization problem, there might be as many parameter tuning algorithms as optimization techniques. Several methods have been proposed, for a good review of current state of the art see \cite{Montero:2010}. Though we have some experience both with Racing (\cite{bibai:2009}), REVAC (\cite{Nannen07}) and ParamILS (\cite{ParamILS-JAIR}), one faces always the same generalization issue: can a parameter-set that has been optimised for a given problem be successfully used to another one? The answer of course depends on the similarity of the two problems. However, even in an optimization domain as precisely defined as AI Planning, there are very few results describing meaningful similarity measures between optimization problems. Moreover, until now, sufficiently precise and accurate features have not been specified that would allow the user to describe the problem, so that the optimal parameter-set could be learned from this feature-set, and carried on to other problems with similar description. No design of a general learning framework with some representative domains of AI planning is known to us and no general experiments has been carried out yet, at least to our knowledge.
+Being a general optimization problem, there are as many parameter tuning algorithms as optimization techniques \cite{Eiben2007,Montero:2010}. However, several specialized methods have been proposed, and the most prominent today are Racing \cite{birattari2002}, REVAC \cite{Nannen07}, SPO \cite{SPO:CEC05}, and ParamILS \cite{ParamILS-JAIR}. All these approaches face the same crucial generalization issue: can a parameter set that has been optimized for a given problem be successfully used to another one? The answer of course depends on the similarity of both problems. However, even in an optimization domain as precisely defined as AI Planning, there are very few results describing meaningful similarity measures between problem instances. Moreover, until now, sufficiently precise and accurate features have not been specified that would allow the user to accurately describe the problem, so that the optimal parameter-set could be learned from this feature-set, and carried on to other problems with similar description. To the best of our knowledge, no design of a general learning framework with some representative domains of AI planning has been proposed, and no general experiments has been carried out yet in this direction.
 
-The one exception we are aware of is the work \cite{Hutter06} in the SAT domain, in which many relevant features have been gathered based on half a century of SAT-research, and hundreds of papers. Extensive parameter tuning on several thousands of instances has allowed the authors to learn a meaningful mapping between the features and running-time, using function regression. Optimizing this model makes it possible to choose the optimal parameters. This paper aims to generalize this work made in the SAT domain; we, however aim not to optimize running time, but fitness value. This difference alone is however not causing major problems. We design the aforementioned framework for any domain, and start with some experimenting. The machine learning techniques used will also be different.
+In the SAT domain, however, one work must be given as an example of what can be done along those lines. In \cite{Hutter06}, many relevant features have been gathered based on half a century of SAT-research, and hundreds of papers. Extensive parameter tuning on several thousands of instances has allowed the authors to learn, using function regression, a meaningful mapping between the features and the running-time of a given SAT solver with given parameters. Optimizing this model makes it possible to choose the optimal parameters for a given (unknown) instance. The present paper aims at generalizing this work made in AI planning, with one major difference: the target will be here to optimize the fitness value for a given runtime, and not the runtime to solution -- as the optimal solution is generally not known for AI planning problems. 
 
-Unfortunately, until now, there has not existed any set of features for AI Planning problems in general that was sufficient to describe the characteristics of a planning task, like for the SAT domain \cite{Hutter06} mentioned above. In this paper however, we make an important step to the framework for parameter tuning applied generally for each domain in AI Planning with a preliminary set of features. Our Learn-and-Optimize (LaO) framework consists of the combination of optimizing (i.e. parameter tuning) and of learning the mapping between features and best parameters. We benefit from learning already in the optimization phase using the learned model similarly as in other surrogate-model based optimization techniques (see for example \cite{Bardenet} for a Gaussian-process-based approach).
+Unfortunately, until now, nobody has yet proposed a set of features for AI Planning problems in general, that would be sufficient to describe the characteristics of a problem, like was done in the SAT domain \cite{Hutter06}. This paper makes a step toward a framework for parameter tuning applied generally for AI Planning and proposes a preliminary set of features. The Learn-and-Optimize (LaO) framework consists of the combination of optimizing (i.e., parameter tuning) and learning, i.e., finding the mapping between features and best parameters. Furthermore, the reuslts of learning will already be useful during further the optimization phases, using the learned model as in standard surrogate-model based techniques (see e.g., \cite{Bardenet} for a Gaussian-process-based approach).
 
-LaO can of course be applied to any target algorithm to be tuned, for example to tune Support Vector Machines applied for different problem-instances. In this paper we are considering as a target a special, Evolutionary Algorithm (EA) based method, called Divide-and-Evolve (DaE), which is an EA applied to solve AI problems. We take DaE as it is, as a black-box algorithm and have not modified it in this paper. The same realization described in \cite{BibEvoCop:2010} is used. 
+LaO can of course be applied to any target optimization methodology that requires parameter tuning. In this paper, the target optimization technique is Evolutionary Algorithms (EA), more precisely the evolutionary AI planner called Divide-and-Evolve (DaE). However, DaE will be here considered as a black-box algorithm, without any modification for the purpose of this work than its original version described in \cite{BibEvoCop:2010}. 
 
-The paper is organized as follows: AI Planning Problems and the basic YASHP Solver is briefly introduced in section \ref{section:planning}. Section \ref{section:dae} describes the intermediate, Divide-and-Evolve Method. Section \ref{section:LaO} describes our new, top level method: Learn-and-Optimize used for parameter tuning. Our results are presented in section \ref{section:results} and conclusions are drawn in section \ref{section:conclusions}. We end the paper in section \ref{section:futurework} with future work foreseeable.
+The paper is organized as follows: AI Planning Problems and the classical YASHP solver are briefly introduced in section \ref{section:planning}. Section \ref{section:dae} describes the evolutionary  Divide-and-Evolve algorithm. Section \ref{section:LaO} introduces the original, top level parameter tuning method, Learn-and-Optimize. The case study presented in Section \ref{section:results} applies LaO to DaE, following the rules of the International Planning Competition 2011 -- Learning Track. Finally, conclusions are drawn and further directions of research are proposed in Section \ref{section:conclusions}. 
 
 \section{AI Planning Problems}
 \label{section:planning}
@@ -243,22 +243,21 @@ Since testing was also carried out on the cluster, the termination criterion for
 
 Note that since our termination criterion is number of evaluations, there was no unsolved instance. If an instance was unsolvable with default parameters within the specified time, it was dropped, if it was solvable, it is also solvable with any parameter-setting, moreover the running time does not depend on the computer. 
 
-Table \ref{table:domains} shows our results. We present several quality-improvement ratios. "In LaO" means that the best found parameter is compared to the default. By definition this ratio can not be less than 1 for any instance. We also present quality-improvement ratios for the retrained ANN on the training-set and the test-set. In these later cases, numbers less then 1 are possible, but were rare. As it can be seen we achieved a considerable quality-gain in training, but the transfer of this improvement to the ANN-model was only partial. Reasons for this may be different. First, there is the unambiguity of the mapping, second, the ANN may not be complex enough for the mapping, but most probably the feature-set is not powerful enough. 
+Table \ref{table:domains} presents several quality-improvement ratios. Label "in LaO" means that the best found parameter is compared to the default. By definition this ratio can not be less than 1 for any instance. We also present quality-improvement ratios for the retrained ANN on the training-set and the test-set. In these later cases, numbers less then 1 are possible, but were rare. As it can be seen we achieved a considerable quality-gain in training, but the transfer of this improvement to the ANN-model was only partial. Reasons for this may be different. First, there is the unambiguity of the mapping, second, the ANN may not be complex enough for the mapping, but most probably the feature-set is not powerful enough. 
 
 On the other hand, the ANN model generalizes excellently to the the independent test-set. Quality-improvement ratios dropped only by 0.01, i.e. the knowledge incorporated in the ANN was transferable to the test cases and usable almost to the same extent as for the train set.
 
 Our results are quite similar for each domain. Even the size of the training set seems not to be so crucial. For example for Freecell all the instances (108 out of 108 generated) could be used, because they were not so hard. On the other hand, only few  Grid instances (55 out of 107 generated) could be used. However, both performed well. The explanation for this may be that both the 32 and 108 instances covered well the whole range of solvable instances.
 
-\section{Conclusions}
+\section{Conclusions and Future Work}
 \label{section:conclusions}
+\label{section:futurework}	
 
 Our method presented in this paper is a surrogate-model based combined learner and optimizer for parameter tuning. We demonstrated that our algorithm is capable of improving the quality of the DaE algorithm considerably even with only a few iterations. An appropriate number of iterations, like 1000 shall be carried out to demonstrate the capability of the algorithm. We also demonstrated that some of this quality-improvement can be incorporated into an ANN-model, which is also able to generalize excellently to an independent test-set.
 
 Naturally, our algorithm also has some parameters, which can be tuned again. Parameter tuning in this respect is similar to the question of the final parameters of an ultimate theory of the Universe: one can always try to reduce one theory to another with possibly less parameters. But the infinite regress can not be stopped: there will always be some ultimate constants. Similarly, the parameters of any algorithm can be tuned by another algorithm and that may improve the results. But there is no ultimate algorithm. The bad news here is that the computing capacity needed is exploding. Good news is that in each step in the hierarchy an improvement can be made, moreover, the possible improvements become smaller and smaller, thus practically we can stop at some point. 
 
 
-\section{Future Work}
-\label{section:futurework}	
 
 The most important experiment to carry out in the future is simply to test the algorithm with more iterations and more domains this takes several month of work even using a cluster. Since LaO is only a framework, as indicated other kind of learning methods, and other kind of optimization techniques may be incorporated. If an ANN is used, the optimal structure has to be determined, or a more sophisticated solution is to apply one of the so-called Growing Neural Network architectures.
 
@@ -268,7 +267,7 @@ One shall also test, how inter-domain generalization works. Maybe it is possible
 
 
 \section{Acknowledgements}
-This work is funded through French ANR project DESCARWIN ANR-09-COSI-002.
+This work is funded through French ANR project DESCARWIN ANR-09-COSI-002.\\~\\
 % \section{Restrictions on Further Use}
 
 
