testing version number ???

--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -22,7 +22,7 @@
 \begin{document}
 
 \title{Instance-Based Parameter Tuning\\
-for Evolutionary AI Planning -- $Revision: 4461$}
+for Evolutionary AI Planning -- $Revision$}
 
 \numberofauthors{1}
 
