--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -109,7 +109,7 @@ Four different mutation operators have been designed, and once an individual has
 Because an individual is a variable length list of states, and a state is a variable length list of atoms, the mutation 
 operator can act at both levels: at the individual level by adding (addState) or removing (delState) 
 a state; or at the state level by adding (addAtom) or removing (delAtom) some atoms in the given state. 
-The complete list of DaE parameters that required some tuning is given in Table \ref{table:parameters}.
+The list of DaE parameters that will be tuned in this paper is given in Table \ref{table:parameters}.
 
 
 \section{Learn-and-Optimize for Parameter Tuning}
