In the middle of Section 4

--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -117,17 +117,19 @@ The list of DaE parameters that will be tuned in this paper is given in Table \r
 
 \subsection{The General LaO Framework}
 
-As already mentioned, parameter tuning is actually a general global optimization problem, thus the main issue of local optimality consists also a problem here. But a further problem arises in parameter tuning, and this is the generality of the tuned parameters. Tuning only one instance has of course a sense if only that instance is to be solved. Parameters tuned for one instance however, may not be optimal for other instances, as \cite{BibGECCO:2010} demonstrates it. This very same paper also demonstrates that global tuning for several domains is even more inferior.
+As already mentioned, parameter tuning is actually a general global optimization problem, thus facing the routine issue of local optimality. But a further problem arises in parameter tuning, and this is the generality of the tuned parameters. Tuning only one instance has of course a sense if only that instance is to be solved. Parameters tuned for one instance however, may not be optimal for other instances, as \cite{BibGECCO:2010} demonstrates. Furthermore, this paper also demonstrates that parameter tuning for several domains simultaneously is even more difficult, if at all possible.
 
-If the parameters are generalized for another instance in the same domain (intra-domain generalization), the problem is that there are instances with very different complexity in the same domain. For example in \cite{BibGECCO:2010} per-domain tuning was performed with the most difficult, last instance as a representative of the domain. One can see from the results that these parameters were often suboptimal for the other instances. Probably the same issue arises if one takes several instances as the representative of the domain. Since the optimum values of the parameters might change from instance to instance, only a "dull" average-like parameter-setting may be computed. Moreover, computing time needed increases linearly with the number of training instances. 
+Even when generalizing parameters learned on one instance to another instance of the same domain (intra-domain generalization) might be problematic, as there are instances with very different complexity in the same domain. For example in \cite{BibGECCO:2010} per-domain tuning was performed with the most difficult, largest instance, considered as a representative of the whole domain. However, it is clear from the results that these parameters were often suboptimal for the other instances. And similar issue might arise even when using several instances as representatives of the domain. Since the optimum values of the parameters might change from instance to instance, only a "dull" average-like parameter-setting may be computed. Moreover, the computational cost of parameter tuning increases linearly with the number of training instances. 
 
-Inter-domain generalization means that the parameter-setting is generalized for an instance in a different domain (extra-domain generalization). The same problems may arise as in intra-domain generalization, but furthermore, also differences between the domains may cause a problem: Even an instance of similar complexity may require different settings in another domain. The inferior results with global tuning in \cite{BibGECCO:2010} indicate that these are real problems.
+The issue is of course even more critical when aiming at inter-domain generalization, i.e., learning the parameters on one ir several instances, and using the learned parameters on instances of different domain than that of the training instances. Indeed, differences between the domains may cause a problem, and even instances of apparent similar complexity (e.g. same number of objects) may require different settings from domain to domain. The poor results with global tuning in \cite{BibGECCO:2010} indicate that these are issues to be considered.
+One workaround this generalization issue is to relax the constraint of finding a single universally optimal parameter-set, that certainly does not exist, and to focus on learning a complex relation between instances and optimal parameters. 
 
-The main obstacle here is in the concept of finding a single optimal parameter-set, instead of finding a more complex relation. After deciding to learn something more complex, the next question arises: "How to learn it?". Our Learn-and-Optimize framework (LaO) aims to answer this question and to solve both the intra-domain and extra-domain generalization problems, by adding learning to optimization. We may assume that there might be a relation between some features of the instance and the optimal parameters. If we could learn such a relation representable by a mapping, we could account both for intra- and extra-domain variability of the optimal parameters. The features could describe differences both between instances from the same domain, both differences between domains. To do this, we try to extract features both from the domain-file and the instance-file.
+The propose Learn-and-Optimize framework (LaO) aims at learning such relation, thus, in the ideal case, solving both the intra-domain and extra-domain generalization problems, by adding learning to optimization. The underlying hypothesis is that there exists a relation between some features describing an instance and the optimal parameters for solving this instance, and the goal of this work is to propose a general methodology to do so. If well designed, the features should describe differences both between instances from the same domain, and differences between instances of different domains -- and hence differences between domains, too. 
+The case study analyzed here deals with AI planning, and some features extracted from both the domain-file and the instance-file will be proposed later.
 
-Suppose we have n features and m parameters. For the sake of simplicity and generality, both the fitness value, the features and the parameters are considered as real values. Parameter tuning is the optimization (in our case minimization) of the fitness function \begin{math}f:\mathbf{R}^m\to \mathbf{R} \end{math}, which function is different for each instance. In our case f is the expected value off the stochastic algorithm DaE executed with parameter \begin{math} p \in \mathbf{R}^m \end{math}. The optimal parameter is defined by \begin{math} p_{opt}=argmin_p\{f(p)\} \end{math}. For each instance there is a set \begin{math} F \in \mathbf{R}^n \end{math}, the features of that instance and the corresponding domain. 
+Suppose for now that we have n features and m parameters. For the sake of simplicity and generality, both the fitness value, the features and the parameters are considered as real values. Parameter tuning is the optimization (assume e.g., minimization) of the fitness function \begin{math}f:\mathbf{R}^m\to \mathbf{R} \end{math}, which function is different for each instance. In our case f is the expected value off the stochastic algorithm DaE executed with parameter \begin{math} p \in \mathbf{R}^m \end{math}. The optimal parameter is defined by \begin{math} p_{opt}=argmin_p\{f(p)\} \end{math}. For each instance there is a set \begin{math} F \in \mathbf{R}^n \end{math}, the features of that instance and the corresponding domain. 
 
-Here we have to relations: each planning instance has features and it has an optimal parameter-set. In order to be able to generalize, we have to get rid of the instance and collapse the two relations into one relation between feature-space and parameter-space. But can we combine these relations into one? There is a possibility that different instances have the same features, which may occur if the feature-set is not rich enough. If for two instances the features are the same, there is a chance that there is no big difference in the optimal parameter. Or to be more precise, there is no big difference in fitness when using one or the other optimal parameter, or maybe something "in-between". We do not know how serious problem this unambiguity could consist. We hope that a learning algorithm would tolerate this and "cut through" the unambiguity. For the sake of simplicity we consider as if there existed an unambiguous mapping from the feature space to the optimal parameter space. 
+Here we have two relations: each planning instance has features and it has an optimal parameter-set. In order to be able to generalize, we have to get rid of the instance and collapse the two relations into one relation between feature-space and parameter-space. But can we combine these relations into one? There is a possibility that different instances have the same features, which may occur if the feature-set is not rich enough. If for two instances the features are the same, there is a chance that there is no big difference in the optimal parameter. Or to be more precise, there is no big difference in fitness when using one or the other optimal parameter, or maybe something "in-between". We do not know how serious problem this unambiguity could consist. We hope that a learning algorithm would tolerate this and "cut through" the unambiguity. For the sake of simplicity we consider as if there existed an unambiguous mapping from the feature space to the optimal parameter space. 
 
 \begin{equation} p_F: \mathbf{R}^n \to \mathbf{R}^m, p_F(F)=p_{opt} \end{equation}.	
 
@@ -261,11 +263,11 @@ The most important experiment to carry out in the future is simply to test the a
 
 Also the benefit of gene-transfer and/or cross-over might be investigated further. Gene-transfer shall be improved so that chromosomes are transfered deterministically in order of similarity of instances measured by similarity of features.
 
-One shall also test, how inter-domain generalization works. Maybe it is possible to learn a mapping for all the domains, since the features may grasp the specificity of a domain. Our results indicate that the current feature-set may be too small and it has to be extended for better results. Feature-selection would become important only if the number of features are more than half of the number of examples (well known rule of thumb). Unfortunately, this is not the case yet.
+One shall also test how inter-domain generalization works. It might be possible to learn a mapping for all domains, since the features may grasp the specificity of a domain. The present results indicate that the current feature set is too small and should be extended for better results. Feature-selection would become important only if the number of features is large compared to the number of examples. Unfortunately, this is not the case yet.
 
 
 \section{Acknowledgements}
-This work is funded through French ANR project DESCARWIN ANR-09-COSI-002.\\~\\
+This work is funded through French ANR project DESCARWIN ANR-09-COSI-002.
 % \section{Restrictions on Further Use}
 
 
